# Couchraoke

./: .gitignore
couchraoke/: settings.gradle.kts
couchraoke/app/: build.gradle.kts
couchraoke/gradle/: libs.versions.toml
couchraoke/gradle/wrapper/: gradle-wrapper.properties
couchraoke_companion/: README.md  pubspec.yaml
couchraoke_companion/android/: local.properties
couchraoke_companion/android/app/: build.gradle.kts
couchraoke_companion/integration_test/: fingerprinting_test.dart  pipeline_test.dart
couchraoke_companion/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
couchraoke_companion/ios/Runner/: Info.plist
couchraoke_companion/ios/Runner.xcodeproj/: project.pbxproj
couchraoke_companion/lib/: pitch_detector_controller.dart
couchraoke_companion/lib/logic/: fingerprinting_service.dart
couchraoke_companion/linux/: CMakeLists.txt
couchraoke_companion/linux/runner/: my_application.cc
couchraoke_companion/rust/: Cargo.toml
couchraoke_companion/rust/src/: fingerprint.rs  frb_generated.rs  lib.rs
couchraoke_companion/rust/src/pyin/: api.rs  hmm.rs  mod.rs  pcm.rs  pyin_stage1.rs  viterbi.rs  yin.rs
couchraoke_companion/rust/tests/: fingerprint_test.rs  pyin.rs
couchraoke_companion/rust/tests/pyin/: api_integration_test.rs  pyin_integration.rs
couchraoke_companion/test/: widget_test.dart
couchraoke_companion/web/: index.html  manifest.json
couchraoke_companion/windows/: CMakeLists.txt
src/: frb.rs  hmm.rs  lib.rs  midi.rs  pyin_stage1.rs  viterbi.rs
tests/: frb_processor_integration.rs  pyin_integration.rs
(+22 files in other folders)
